--- a/src/app/usit/components/email-configuration/email-configuration.component.html
+++ b/src/app/usit/components/email-configuration/email-configuration.component.html
@@ -4,12 +4,13 @@
       <mat-card-title class="title">{{ buttonText }} Email Configuration</mat-card-title>
       <mat-card-content>
         <form [formGroup]="emailForm" autocomplete="off">
-  
+
           <!-- Email -->
           <mat-form-field appearance="outline" class="full-width">
             <mat-label>Email</mat-label>
             <!-- [readonly]="buttonText !== 'Save'" -->
-            <input matInput formControlName="email" type="email" autocomplete="new-email" (change)="emailDuplicate($event)"/>
+            <input matInput formControlName="email" type="email" autocomplete="new-email"
+              (change)="emailDuplicate($event)" />
             <mat-icon matPrefix [style.color]="'#3f51b5'">email</mat-icon>
             <mat-error *ngIf="emailForm.get('email')?.hasError('required')">
               Email is required
@@ -18,7 +19,7 @@
               Invalid Email Address
             </mat-error>
           </mat-form-field>
-  
+
           <!-- Old Password -->
           <mat-form-field appearance="outline" class="full-width"
             *ngIf="showOldPasswordField && !forgotPassword && !otpValidated">
@@ -35,7 +36,7 @@
               Old Password is required
             </mat-error>
           </mat-form-field>
-  
+
           <!-- New Password -->
           <mat-form-field appearance="outline" class="full-width" *ngIf="otpValidated || buttonText === 'Update'">
             <mat-label>New Password</mat-label>
@@ -51,7 +52,7 @@
               New Password is required
             </mat-error>
           </mat-form-field>
-  
+
           <mat-form-field appearance="outline" class="full-width" *ngIf=" buttonText === 'Save'">
             <mat-label>Password</mat-label>
             <input matInput formControlName="password" type="{{ hideNPassword ? 'password' : 'text' }}"
@@ -64,7 +65,7 @@
               Password is required
             </mat-error>
           </mat-form-field>
-  
+
           <mat-form-field appearance="outline" class="full-width" *ngIf="otpValidated || buttonText === 'Update'">
             <mat-label>Confirm Password</mat-label>
             <input matInput formControlName="conformpassword" type="{{ hideCPassword ? 'password' : 'text' }}"
@@ -80,11 +81,11 @@
               Passwords do not match
             </mat-error>
           </mat-form-field>
-  
+
           <div class="forgot-password" *ngIf="buttonText === 'Update' && !forgotPassword && !otpValidated">
             <a class="forgot-password-link" (click)="onForgotPassword()">Forgot Password?</a>
           </div>
-  
+
           <mat-form-field appearance="outline" class="full-width" *ngIf="otpSent && !otpValidated">
             <mat-label>Enter OTP</mat-label>
             <input matInput formControlName="otp" type="text" autocomplete="off" />
@@ -93,26 +94,26 @@
               OTP is required.
             </mat-error>
           </mat-form-field>
-  
+
           <div class="button-container" *ngIf="!otpSent && forgotPassword">
             <button mat-raised-button color="primary" type="submit" (click)="requestOtp()">
               Request OTP
             </button>
           </div>
-  
+
           <div class="button-container" *ngIf="otpSent && forgotPassword">
             <button mat-raised-button color="primary" type="submit"
               [disabled]="otpSent && emailForm.get('otp')?.value.length !== 6" (click)="validateOtp()">
               Validate OTP
             </button>
           </div>
-  
+
           <div class="button-container" *ngIf="!otpSent && !otpValidated && !forgotPassword">
             <button mat-raised-button color="primary" type="submit" (click)="saveDetails()">
               {{ buttonText }}
             </button>
           </div>
-  
+
           <div class="button-container" *ngIf="otpValidated">
             <button mat-raised-button color="primary" type="button" (click)="saveChangedPassword()">
               Submit
@@ -121,7 +122,7 @@
         </form>
       </mat-card-content>
     </mat-card>
-  
+
   </div>
 </ng-container>
 <ng-container *ngIf="role === 'Super Administrator'">
@@ -134,29 +135,29 @@
         <button mat-icon-button color="primary" class="add-email" matToolTip="Add" (click)="addEmail()">
           <mat-icon class="item-icon">add_circle</mat-icon>
         </button>
-  
+
         <div class="search-hot-list">
           <input matInput type="text" class="search" placeholder="search">
           <!-- (keyup)="applyFilter($event)" -->
         </div>
       </div>
     </div>
-  
+
     <div id="table-container" class="table-wrapper">
       <section class="mat-elevation-z8 hot-list-table-style">
         <table mat-table [dataSource]="dataSource" matSort oncopy="return false">
           <!-- (matSortChange)="onSort($event)" -->
-  
+
           <!--- Note that these columns can be defined in any order.
                           The actual rendered columns are set as a property on the row definition" -->
-  
+
           <!-- SNo Column -->
           <ng-container matColumnDef="SerialNum">
             <th mat-header-cell *matHeaderCellDef style=" width: 1% ">
               S.No </th>
             <td mat-cell *matCellDef="let element" style=" width: 1% "> {{element?.serialNum}} </td>
           </ng-container>
-  
+
           <!-- Technology Column -->
           <ng-container matColumnDef="Technology">
             <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Technology">
@@ -166,17 +167,17 @@
               {{element?.technology ?? '-'}}
             </td>
           </ng-container>
-  
+
           <!-- Email Column -->
           <ng-container matColumnDef="Email">
             <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Email">
               Email
             </th>
-            <td mat-cell *matCellDef="let element">
+            <td mat-cell *matCellDef="let element" #emailCell>
               {{ element?.email }}
             </td>
           </ng-container>
-  
+
           <!-- Password Column-->
           <ng-container matColumnDef="Password">
             <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Password">
@@ -185,19 +186,44 @@
               {{ element?.password }}
             </td>
           </ng-container>
-  
+
           <!-- Received Date Column-->
           <ng-container matColumnDef="ReceivedDate">
             <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by ReceivedDate"
               style=" width: 10% !important;" nowrap>
               Extraxt Emails </th>
             <td mat-cell *matCellDef="let element" style=" width: 10% !important;">
-              <button mat-raised-button color="primary" style="width: max-content; height: max-content" (click)="extractEmails(element)">
+              <button mat-raised-button color="primary" style="width: max-content; height: max-content"
+                (click)="extractEmails(element)">
                 Extract
               </button>
             </td>
           </ng-container>
-  
+
+          <!-- Stop Extraction Column -->
+          <ng-container matColumnDef="StopExtraction">
+            <th mat-header-cell *matHeaderCellDef style="width: 10% !important;" nowrap>
+              Stop Extraction
+            </th>
+            <td mat-cell *matCellDef="let element" style="width: 10% !important;">
+              <button mat-raised-button color="warn" style="width: max-content; height: max-content"
+                (click)="stopExtraction(element.email)">
+                Stop
+              </button>
+            </td>
+          </ng-container>
+
+
+          <!-- Status Column -->
+          <ng-container matColumnDef="Status">
+            <th mat-header-cell *matHeaderCellDef> Status </th>
+            <td mat-cell *matCellDef="let element">
+              {{ element?.status || 'N/A' }}
+            </td>
+          </ng-container>
+
+
+
           <!-- Action Column-->
           <ng-container matColumnDef="Action">
             <th mat-header-cell *matHeaderCellDef style="width: 5%"> Action </th>
@@ -210,7 +236,7 @@
               </span>
             </td>
           </ng-container>
-  
+
           <!-- table ROW -->
           <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
           <tr mat-row *matRowDef="let row; columns: dataTableColumns;"></tr>
@@ -218,7 +244,7 @@
         <p class="no-data-found" *ngIf="!dataSource.data.length">{{'No matching data found'}}</p>
       </section>
     </div>
-  
+
     <div class="paginator">
       <!-- paginator -->
       <!-- <mat-paginator (page)="handlePageEvent($event)" [length]="totalItems" [pageSize]="pageSize" [disabled]="false"
@@ -226,6 +252,6 @@
               [hidePageSize]="true" [pageIndex]="currentPageIndex" aria-label="Select page">
           </mat-paginator> -->
     </div>
-  
+
   </div>
 </ng-container>
